<resources>
    <string name="app_name">FormularioEstaticoSimple</string>
    <string name="menu_save">Save</string>
    <string name="title_asistentes">Asistentes</string>
    <string name="titulo">Título</string>
    <string name="acta">Acta N°</string>
    <string name="hint_acta">#</string>
    <string name="lugar_origen">Lugar de origen:</string>
    <string name="hint_lugar">Lugar</string>
    <string name="fecha_reunion">Fecha de reunión:</string>
    <string name="hint_fechaReu">Fecha</string>
    <string name="hora_inicio">Hora de inicio: </string>
    <string name="hint_hora">Hora</string>
    <string name="hora_finalizacion">Hora de finalización:</string>
    <string name="lugar_reunion">Lugar de la reunión:</string>
    <string name="ausentes">Ausentes</string>
    <string name="invitados">Invitados</string>
    <string name="orden_dia">Orden del día</string>
    <string name="dllo_reunion">Desarrollo de la Reunión</string>
    <string name="compromisos">Compromisos</string>
    <string name="verificacion_string">Verificación del cumplimiento de compromisos adquiridos en la anterior reunión</string>
    <string name="num">N°</string>
    <string name="responsables">Responsables</string>
    <string name="estado">Estado</string>
    <string name="compromisos_adquiridos">Compromisos adquiridos en la reunión actual</string>
    <string name="plazo">Plazo</string>
    <string name="observaciones">Observaciones</string>
    <string name="reqiuere_document">Requiere documentar Acción correctiva, preventiva o de mejora</string>
    <string name="seguimiento">SEGUIMIENTO</string>
    <string name="convoca_reunion">Convocatoria de la próxima reunión</string>
    <string name="hint_date">--/--/----</string>
    <string name="hint_hour">--:--</string>
    <string name="firma_coordina">Presidente o coordinador de la reunión</string>
    <string name="firma_secretario">Secretario de la reunión</string>
    <string name="nombres_aplellidos">Nombres y Apellidos</string>
    <string name="hint_nombre_completo">Nombre Completo</string>
    <string name="cargo">Cargo</string>
    <string name="hint_nombre">Nombre</string>
    <string name="fillFields">Llenar Campos</string>
    <string name="socketWS">190.144.8.138:60062</string>
    <string name="errorConection">Error de conexión con el servidor</string>
    <string name="limpiar">Limpiar</string>
    <string name="inFirma">Ingrese firma</string>
    <string name="acept">Aceptar</string>
    <string name="cancel">Cancelar</string>
</resources>
