<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:id="@+id/tv_compromisos"
            android:text="1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/black"/>
        <View
            android:layout_width="1sp"
            android:layout_height="match_parent"
            android:background="@color/black"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/compromisos"
            android:textSize="@dimen/subtitle"
            android:id="@+id/et_compromiso"
            />
        <View
            android:layout_width="1sp"
            android:layout_height="match_parent"
            android:background="@color/black"/>

        <EditText
            android:id="@+id/et_respons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/responsables"
            android:textSize="@dimen/subtitle"/>

        <View
            android:layout_width="1sp"
            android:layout_height="match_parent"
            android:background="@color/black"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/estado"
            android:id="@+id/et_estado"
            android:textSize="@dimen/subtitle"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:background="@color/black"/>


</LinearLayout>