<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/nombres_aplellidos"
                android:textColor="@color/black"
                android:gravity="center"
                android:scrollHorizontally="true"
                android:ellipsize="end"
                android:id="@+id/tv_name"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/et_name"
                android:hint="@string/hint_nombre"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.99"
            android:background="@color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/cargo"
                android:textColor="@color/black"
                android:gravity="center"
                android:id="@+id/tv_cargo"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/et_cargo"
                android:hint="@string/cargo"/>
        </LinearLayout>


    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:background="@color/black"/>

</LinearLayout>